test/error/OpIsBase.fu
public class Base
{
}

public class Test : Base
{
	public static bool Run()
	{
		Test() o;
		Test p = o;
		return p is Base; //ERROR: 'p' is 'Test', 'is Base' would always equal 'true'
	}
}
